--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-<title>Collaboration</title>
-</head>
+<?php
 
 
+ // MYSQLI SELECT
+ class MSQLI{
+public function Select(){
+   $servername ="localhost";
+   $username="root";
+   $password="ekenem12345";
+   $dbname ="phpdb";
+//connect
+$conn = mysqli_connect($servername, $username, $password, $dbname);
 
-</html>
+//check connection
+if (!$conn){
+  die("Connection failed: " .mysqli_connect_error());
+}
+//echo "Connected successfully";
+$sql = "SELECT id,FirstName , LastName, Email  FROM myguest";
+$result = mysqli_query($conn,$sql);
+
+
+if (mysqli_num_rows($result) > 0)
+{
+  //output data of each row
+  while($row = mysqli_fetch_assoc($result)){
+echo "id:". $row["id"]. " - Name: " . $row["FirstName"]."__". $row["LastName"]. "<br>";
+
+  }
+
+}else{ echo "0 results";
+}
+mysqli_close($conn);
+}
+}
+$UserOne = new MSQLI();
+$UserOne-> Select();
+?>
